// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryCity renders with a custom value 1`] = `
<label id="deliveryCityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           maxlength="40"
           aria-required="true"
           required
           value="foobar"
    >
    <span class="o-forms-input__error">
      Please enter a valid city or town
    </span>
  </span>
</label>
`;

exports[`DeliveryCity renders with a disabled input element 1`] = `
<label id="deliveryCityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           maxlength="40"
           aria-required="true"
           required
           disabled
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid city or town
    </span>
  </span>
</label>
`;

exports[`DeliveryCity renders with an error 1`] = `
<label id="deliveryCityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           maxlength="40"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid city or town
    </span>
  </span>
</label>
`;

exports[`DeliveryCity renders with default props 1`] = `
<label id="deliveryCityField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           maxlength="40"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter a valid city or town
    </span>
  </span>
</label>
`;
